patch: [diag] added parameters to fio
Change-Type: patch
