# diag/runner/routes/drives.js
@@ -32,6 +32,10 @@ router.post('/fio', async (req, res, next) => {
     numjobs, 
     name, 
     size,
+    io_size,
+    ioengine,
+    iodepth,
+    fsync,
     invalidate,
     overwrite,
     output_format
@@ -48,12 +52,16 @@ router.post('/fio', async (req, res, next) => {
     `--filename=${fileName}`,
     `--direct=${direct || 0}`,
     `--rw=${rw || "write"}`,
-    `--bs=${bs || "4k"}`,
-    `--runtime=${runtime || 20}`,
+    `--bs=${bs || "1024k"}`,
+    `--runtime=${runtime || 30}`,
     '--time_based',
-    `--numjobs=${numjobs || 8}`,
+    `--numjobs=${numjobs || 1}`,
     `--name=${name || `etcher_test_${new Date(Date.now()).toISOString()}`}`,
-    `--size=${size || '1g'}`,
+    `--size=${size || '500m'}`,
+    `--io_size=${io_size || "10g"}`,
+    `--ioengine=${ioengine || "libaio"}`,
+    `--iodepth=${iodepth || 32}`,
+    `--fsync=${fsync || 10000}`,
     `--invalidate=${invalidate || 0}`,
     `--overwrite=${overwrite || 0}`,
     '--group_reporting',
